--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "grommet-icons": "^4.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
